--- a/styles/main-media.css
+++ b/styles/main-media.css
@@ -85,16 +85,26 @@
         font-size: 10px;
     }
 
+    .wrapper {
+        width: 468px;
+    }
+
     .description {
         width: 300px;
         height: 100px;
         top:18em;
      }
 
+    .offer {
+        width: 460px;
+        text-align: center;
+    }
+
     .coffe-beans {
         margin: 3em 0 0 0;
         display: flex;
         flex-direction: column;
+        align-items: center;
     }
 
     .coffe-bean {
@@ -110,6 +120,10 @@
 /*----------------------------------------*/
 
 @media screen and (max-width: 480px) {
+    .wrapper {
+        width: 300px;
+    }
+
     .wrapper-header {
         height: 300px;
     }
