--- a/styles/main.css
+++ b/styles/main.css
@@ -131,8 +131,13 @@ body {
     outline: none;
 }
 
+.description>button:hover {
+    color: var(--orange-color);
+    background-color: var(--white-color);
+    transition: 0.5s;
+}
 
-/*-----------------------------------------------------*/
+    /*-----------------------------------------------------*/
 .offer {
     margin: 7em 0 0 0;
 }
